<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>uk.pallas.systems</groupId>
        <artifactId>parent</artifactId>
        <version>0.2.2</version>
    </parent>
    <groupId>uk.pallas.systems.categr</groupId>
    <artifactId>parent</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>
    <url>https://pallassystems.github.io/typr/</url>

    <name>Categr</name>
    <description>Categr is a Data Categories microservice, it holds a central repository of categories and what those categories of data mean.</description>

    <modules>
        <module>core</module>
        <module>hibernate</module>
        <module>runnable</module>
        <module>rest</module>
    </modules>

    <scm>
        <connection>scm:git:https://github.com/PallasSystems/categr.git</connection>
        <developerConnection>scm:git:https://github.com/PallasSystems/categr.git</developerConnection>
        <url>https://github.com/PallasSystems/typr</url>
      <tag>HEAD</tag>
  </scm>

    <properties>
        <github_repository_name>categr</github_repository_name>
        <scmpublish.content>${project.build.directory}/staging/parent</scmpublish.content>
        <!-- Compiler Options. -->
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <!-- Plugin dependencies. -->
        <org.springdoc.maven.plugin.version>1.4</org.springdoc.maven.plugin.version>
        <com.github.therapi.version>0.15.0</com.github.therapi.version>
        <docker-maven-plugin.version>0.43.0</docker-maven-plugin.version>
        <!-- Dependencies. -->
        <org.springframework.boot.version>3.0.6</org.springframework.boot.version>
        <org.springdoc.version>2.1.0</org.springdoc.version>
        <com.neovisionaries.version>1.29</com.neovisionaries.version>
        <si.uom.version>2.1</si.uom.version>
        <javax.measure.version>2.2</javax.measure.version>
        <javax.servlet.version>4.0.1</javax.servlet.version>
        <!-- Database dependencies. -->
        <org.postgresql.version>42.6.0</org.postgresql.version>
        <org.hsqldb.version>2.7.1</org.hsqldb.version>
        <!-- Test Dependencies. -->
        <org.mockito.version>5.3.1</org.mockito.version>
    </properties>

    <build>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
            </resource>
        </resources>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.springdoc</groupId>
                    <artifactId>springdoc-openapi-maven-plugin</artifactId>
                    <version>${org.springdoc.maven.plugin.version}</version>
                    <configuration>
                        <attachArtifact>true</attachArtifact>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <version>${org.springframework.boot.version}</version>
                    <configuration>
                        <jvmArguments>-Dspring.application.admin.enabled=true</jvmArguments>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>io.fabric8</groupId>
                    <artifactId>docker-maven-plugin</artifactId>
                    <version>${docker-maven-plugin.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <dependencyManagement>
        <dependencies>
            <!-- Import dependency management from Spring Boot -->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${org.springframework.boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- Country Service related Dependencies. -->
            <dependency>
                <groupId>com.neovisionaries</groupId>
                <artifactId>nv-i18n</artifactId>
                <version>${com.neovisionaries.version}</version>
            </dependency>
            <!-- Units Service related Dependencies. -->
            <dependency>
                <groupId>si.uom</groupId>
                <artifactId>si-units</artifactId>
                <version>${si.uom.version}</version>
            </dependency>
            <dependency>
                <groupId>javax.measure</groupId>
                <artifactId>unit-api</artifactId>
                <version>${javax.measure.version}</version>
            </dependency>

            <!-- Databases supported by the system. -->
            <dependency>
                <groupId>org.postgresql</groupId>
                <artifactId>postgresql</artifactId>
                <version>${org.postgresql.version}</version>
            </dependency>
            <dependency>
                <groupId>org.hsqldb</groupId>
                <artifactId>hsqldb</artifactId>
                <version>${org.hsqldb.version}</version>
            </dependency>
            <!-- Manages the view of the OpenAPI part. -->
            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
                <version>${org.springdoc.version}</version>
            </dependency>
            <!-- Required after JDK 1.8 -->
            <dependency>
                <groupId>javax.servlet</groupId>
                <artifactId>javax.servlet-api</artifactId>
                <version>${javax.servlet.version}</version>
            </dependency>
            <!-- Test dependencies. -->
            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-core</artifactId>
                <version>${org.mockito.version}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>
</project>
